--- a/src/less/global/widgets.less
+++ b/src/less/global/widgets.less
@@ -7,234 +7,6 @@
 	min-width: 300px;
 	max-width: 400px;
 
-	.search {
-		position: relative;
-
-		.form-group {
-			&::after {
-				content: '\f002';
-				font-family: "Font Awesome 5 Pro";
-				font-weight: 400;
-				display: inline-block;
-				font-style: normal;
-				-webkit-font-feature-settings: normal;
-				font-feature-settings: normal;
-				font-variant: normal;
-				text-rendering: auto;
-				-webkit-font-smoothing: antialiased;
-				right: 33px;
-				top: 70px;
-				position: absolute;
-				color: #aeb4cc;
-				font-size: 1.2em;
-			}
-		}
-
-		#my-custom-input {
-			/*box-shadow: 0 0 5px rgba(65,67,144,.15);*/
-			background: white;
-			align-items: center;
-			padding: 17px 5%;
-			width: 90%;
-			color: #527089;
-			font-size: 1em;
-			font-family: 'TTNorms-Medium',sans-serif!important;
-			font-weight: 200;
-			-webkit-transition: 0.3s all;
-			transition: 0.3s all;
-			outline: 0;
-			-webkit-appearance: none;
-			border: 1px solid #dddddd;
-			border-radius: 2px;
-
-			&::placeholder {
-				color: #828294;
-				font-family: 'TTNorms-Regular',sans-serif!important;
-			}
-
-			&:hover {
-				background: rgba(64, 206, 199, 0.16);
-				border-color: #82d3d0;
-				cursor: text;
-
-				&::placeholder {
-					color: #72859d;
-				}
-
-				&::after {
-					color: #8aafb8;
-				}
-			}
-		}
-
-		i {
-			position: absolute;
-			top: 32%;
-			right: 18px;
-
-			&:hover {
-				color: #1b7382;
-			}
-		}
-	}
-
-	#nav-search {
-		font-size: 1em;
-		font-family: 'TTNorms-Medium',sans-serif!important;
-		font-weight: 200;
-		transition: 0.3s all;
-		outline: none;
-		-webkit-appearance: none;
-		border: 1px solid #cfd3e0;
-		border-radius: 2px;
-		border-top: 0;
-
-		* {
-			transition: 0.3s all;
-		}
-
-		li {
-			width: 90%;
-			padding: 15px 5%;
-			text-align: left;
-			display: flex;
-			justify-content: space-between;
-			background: #fff;
-
-			&:nth-child(even) {
-				background: #f5f8fb;
-			}
-
-			&:hover {
-				background: lighten(@theme-color, 10%);
-				color: white;
-				border: 0;
-
-				a {
-					color: white;
-				}
-			}
-
-			img {
-				height: 55px;
-				width: 133px;
-				overflow: hidden;
-				margin-right: 15px;
-			}
-
-			div {
-				width: 100%;
-
-				a {
-					display: block;
-					line-height: 1.4;
-					font-size: 0.9em;
-					-webkit-line-clamp: 2;
-					font-weight: 600;
-				}
-
-				.tag {
-					display: block;
-					line-height: 1.5;
-
-					span {
-						font-size: 0.7em;
-						font-weight: 100;
-						line-height: 1.5;
-						padding: 5px 10px;
-						margin-top: 4px;
-						display: block;
-						width: fit-content;
-
-						i {
-							margin-right: 4px;
-							font-size: 0.7em;
-							display: none;
-						}
-					}
-				}
-			}
-		}
-	}
-
-	#my-custom-results {
-		font-size: 1em;
-		font-family: 'TTNorms-Medium',sans-serif!important;
-		font-weight: 200;
-		transition: 0.3s all;
-		outline: none;
-		-webkit-appearance: none;
-		border: 1px solid #cfd3e0;
-		border-radius: 2px;
-		border-top: 0;
-
-		* {
-			transition: 0.3s all;
-		}
-
-		li {
-			width: 90%;
-			padding: 15px 5%;
-			text-align: left;
-			display: flex;
-			justify-content: space-between;
-			background: #fff;
-
-			&:nth-child(even) {
-				background: #f5f8fb;
-			}
-
-			&:hover {
-				background: lighten(@theme-color, 10%);
-				color: white;
-				border: 0;
-
-				a {
-					color: white;
-				}
-			}
-
-			img {
-				height: 55px;
-				width: 133px;
-				overflow: hidden;
-				margin-right: 15px;
-			}
-
-			div {
-				width: 100%;
-
-				a {
-					display: block;
-					line-height: 1.4;
-					font-size: 0.9em;
-					-webkit-line-clamp: 2;
-					font-weight: 600;
-				}
-
-				.tag {
-					display: block;
-					line-height: 1.5;
-
-					span {
-						font-size: 0.7em;
-						font-weight: 100;
-						line-height: 1.5;
-						padding: 5px 10px;
-						margin-top: 4px;
-						display: block;
-						width: fit-content;
-
-						i {
-							margin-right: 4px;
-							font-size: 0.7em;
-							display: none;
-						}
-					}
-				}
-			}
-		}
-	}
 
 	.tag-cloud {
 		display: flex;
@@ -291,6 +63,14 @@
 
 		&:first-of-type {
 			margin-right: 0;
+		}
+
+		&.text {
+			p {
+				font-size: 15px;
+		    font-family: 'TTNorms-Regular', sans-serif;
+		    line-height: 1.6;
+			}
 		}
 
 		.social-btns {
