--- a/src/less/posts/postfooter.less
+++ b/src/less/posts/postfooter.less
@@ -25,7 +25,7 @@
 		flex-wrap: wrap;
 		align-items: center;
 		justify-content: flex-start;
-		margin: 20px 0;
+		margin: 30px 0;
 
 		a {
 			background: #e7eefa;
@@ -61,7 +61,7 @@
 	}
 
 	.share {
-		margin: 15px 0 0 !important;
+		margin: 15px 0 10px !important;
 
 		.share-icons {
 			display: flex;
