--- a/src/less/posts/serieswidget.less
+++ b/src/less/posts/serieswidget.less
@@ -3,8 +3,7 @@
   padding: 35px 20px 10px;
   display: none;
   position: relative;
-  border-bottom: 1px solid #e0e8ec;
-  border-top: 1px solid #e0e8ec;
+  border: 1px solid #e0e8ec;
   overflow: hidden;
 
   @media(max-width: 800px) {
