--- a/partials/header.hbs
+++ b/partials/header.hbs
@@ -1,10 +1,12 @@
 <header>
   <div class="banner">
+    <div class="search form-group">
+    	<i class="far fa-search"></i><input id="my-custom-input" placeholder="Search all posts">
+		</div>
+    <div id="my-custom-results"></div>
     {{#if @site.logo}}
   		<a class="logo" href="{{@site.url}}">
         <img src="{{@site.logo}}" alt="{{@site.title}}" data-rjs="2">
-        <!-- <img src="https://res.cloudinary.com/hackers-and-slackers/image/upload/v1544107494/images/logowhite_long.png" alt="{{@site.title}}" data-rjs="2"> -->
-        <!--<img src="https://res.cloudinary.com/hackers-and-slackers/image/upload/v1544107494/images/logowhite_long.png" alt="{{@site.title}}" data-rjs="2">-->
       </a>
   	{{else}}
   		<a class="branding" href="{{@site.url}}">{{@site.title}}</a>
