--- a/partials/navigation.hbs
+++ b/partials/navigation.hbs
@@ -1,7 +1,5 @@
 <ul class="menu">
 	{{#foreach navigation}}
-		<li class="nav-{{slug}}{{#if current}} nav-current{{/if}}" role="presentation"><a href="{{url absolute="true"}}">{{label}}</a></li>
+		<a href="{{url absolute="true"}}"><li class="nav-{{slug}}{{#if current}} nav-current{{/if}}" role="presentation">{{label}}</li></a>
 	{{/foreach}}
 </ul>
-
-<div class="overlay"></div>
