--- a/src/less/global/fonts.less
+++ b/src/less/global/fonts.less
@@ -5,6 +5,14 @@
 @font-face {font-family: 'TTNorms-Medium';src: url('../../../assets/fonts/38D340_1_0.eot');src: url('../../../assets/fonts/38D340_1_0.eot?#iefix') format('embedded-opentype'),url('../../../assets/fonts/38D340_1_0.woff2') format('woff2'),url('../../../assets/fonts/38D340_1_0.woff') format('woff'),url('../../../assets/fonts/38D340_1_0.ttf') format('truetype');}
 @font-face {font-family: 'TTNorms-Regular';src: url('../../../assets/fonts/38D340_2_0.eot');src: url('../../../assets/fonts/38D340_2_0.eot?#iefix') format('embedded-opentype'),url('../../../assets/fonts/38D340_2_0.woff2') format('woff2'),url('../../../assets/fonts/38D340_2_0.woff') format('woff'),url('../../../assets/fonts/38D340_2_0.ttf') format('truetype');}
 
+/* latin */
+@font-face {
+  font-family: 'ProductSans-Light';
+  font-style: normal;
+  font-weight: 300;
+  src: local('Product Sans Light'), local('ProductSans-Light'), url("https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts/ProductSans-Light.woff2") format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
 
 /* latin */
 @font-face {
