--- a/src/less/global/nav.less
+++ b/src/less/global/nav.less
@@ -1,3 +1,119 @@
+header {
+  .search {
+
+    .form-group {
+      &::after {
+        content: '\f002';
+        font-family: "Font Awesome 5 Pro";
+        font-weight: 400;
+        display: inline-block;
+        font-style: normal;
+        -webkit-font-feature-settings: normal;
+        font-feature-settings: normal;
+        font-variant: normal;
+        text-rendering: auto;
+        -webkit-font-smoothing: antialiased;
+        right: 33px;
+        top: 70px;
+        position: absolute;
+        color: #aeb4cc;
+        font-size: 1.2em;
+      }
+    }
+
+
+    #my-custom-input {
+      height: 100%;
+      width: 200px;
+      background: none;
+      border: none;
+      color: white;
+      padding-left: 20px;
+      font-size: 1em;
+      font-family: TTNorms-Regular;
+    }
+  }
+
+  #my-custom-results {
+    font-size: 1em;
+    font-family: 'TTNorms-Medium',sans-serif!important;
+    font-weight: 200;
+    transition: 0.3s all;
+    outline: none;
+    -webkit-appearance: none;
+    border: 1px solid #cfd3e0;
+    border-radius: 2px;
+    border-top: 0;
+
+    * {
+      transition: 0.3s all;
+    }
+
+    li {
+      width: 90%;
+      padding: 15px 5%;
+      text-align: left;
+      display: flex;
+      justify-content: space-between;
+      background: #fff;
+
+      &:nth-child(even) {
+        background: #f5f8fb;
+      }
+
+      &:hover {
+        background: lighten(@theme-color, 10%);
+        color: white;
+        border: 0;
+
+        a {
+          color: white;
+        }
+      }
+
+      img {
+        height: 55px;
+        width: 133px;
+        overflow: hidden;
+        margin-right: 15px;
+      }
+
+      div {
+        width: 100%;
+
+        a {
+          display: block;
+          line-height: 1.4;
+          font-size: 0.9em;
+          -webkit-line-clamp: 2;
+          font-weight: 600;
+        }
+
+        .tag {
+          display: block;
+          line-height: 1.5;
+
+          span {
+            font-size: 0.7em;
+            font-weight: 100;
+            line-height: 1.5;
+            padding: 5px 10px;
+            margin-top: 4px;
+            display: block;
+            width: fit-content;
+
+            i {
+              margin-right: 4px;
+              font-size: 0.7em;
+              display: none;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
 
 @media (max-width:1000px) {
   .main-navigation {
@@ -35,6 +151,8 @@
   header {
     margin-bottom: 40px;
     box-shadow: 1px 1px 3px rgba(143, 142, 179, 0.2) !important;
+
+
 
     @media(max-width: 600px) {
       margin-bottom: 0;
