--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -158,16 +158,14 @@
 	}
 
 	h2 {
-		margin: 40px 0 20px;
-		color: #276890;
+	  margin: 40px 0;
+    color: #555560;
 		line-height: 1.3;
 		font-family: 'ProductSans-Regular';
-		font-weight: 400!important;
-		font-size: 1.7em;
+		font-weight: 100!important;
+		font-size: 1.9em;
 		width: fit-content;
 		width: 100%;
-		border-bottom: 1px solid #d2e5f4;
-		padding-bottom: 6px;
 		@media(max-width: 800px) {
 			font-size: 1.9em;
 			padding-bottom: 9px;
@@ -188,12 +186,10 @@
 	h3 {
 		font-size: 1.3em;
 		line-height: 1.2;
-		color: #365c8e;
+		color: #555560;
 		font-weight: 600;
-		margin-top: 50px;
-		color: @header-color;
-		margin-bottom: 8px;
-		font-family: 'TTNorms-Medium';
+		margin: 40px 0;
+		font-family: 'ProductSans-Medium';
 		@media(max-width: 800px) {
 			font-size: 1.3em;
 		}
@@ -211,7 +207,6 @@
 	p {
 		text-align: left;
 		font-size: 1em;
-		line-height: 1.6;
 		color: #393a40;
 		-webkit-font-smoothing: auto;
 		@media(max-width: 600px) {
@@ -226,8 +221,9 @@
 	}
 
 	p {
-		margin: 0 0 20px;
+		margin: 0 0 30px;
 		font-size: 1em;
+		line-height: 2em;
 
 		@media (max-width: 600px) {
 			text-align: left;
@@ -443,7 +439,7 @@
 
 	ol,
 	ul {
-		margin-left: 10px;
+		margin-left: 20px;
 		padding-left: 0;
 		margin-bottom: 30px;
 		margin-top: 20px;
@@ -459,7 +455,7 @@
 			text-rendering: auto;
 			margin: 15px 0 15px 10px;
 			padding-left: 0;
-			line-height: 1.4;
+			line-height: 1.7;
 			display: block;
 			@media(max-width: 600px) {
 				margin: 20px 0;
