post page redesign

--- a/src/less/posts/about-author.less
+++ b/src/less/posts/about-author.less
@@ -5,7 +5,8 @@
   padding: 40px 60px;
   min-height: 85px;
   box-shadow: 0 0 5px rgba(80,82,204,.1)!important;
-  display: flex;
+  width: fit-content;
+  margin: 30px auto;
   justify-content: space-between;
   @media(max-width: 600px) {
     padding: 30px;
