--- a/src/less/posts/languages/markup.less
+++ b/src/less/posts/languages/markup.less
@@ -1,5 +1,5 @@
 .post-content {
-  
+
   .handlebars,
   .hljs.html,
   .language-css,
@@ -8,7 +8,7 @@
   .language-html,
   .language-jinja,
   .language-xml {
-    background: #2f3053 !important;
+    background: #2d2241 !important;
     color: #d0e1f6;
 
     .hljs-tag {
