--- a/src/less/posts/nextprev.less
+++ b/src/less/posts/nextprev.less
@@ -1,16 +1,20 @@
 article {
   .nextprev-container {
-    position: absolute;
+    position: relative;
     bottom: 0;
     left: 0;
+    right: 0;
     background: white;
-    width: 100%;
+    width: 90%;
     display: none;
+    margin: auto;
+    border: 1px solid #ecf0f9;
 
     .nextprev {
       display: flex;
       flex-direction: row;
       flex-wrap: nowrap;
+
 
       .prev-article {
         border-right: 1px solid #ecf0f9;
