--- a/src/less/global/pagination.less
+++ b/src/less/global/pagination.less
@@ -114,8 +114,9 @@
 /* Next & Prev buttons on post pages */
 
 .prev-next-wrap {
-	margin: 30px 0 0 0;
+	margin: 30px auto;
 	padding: 0;
+	max-width: 830px;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
