making gallery changes

--- a/src/less/global/pagination.less
+++ b/src/less/global/pagination.less
@@ -53,7 +53,7 @@
     display: inline-block;
     color: #828994;
     background: none;
-    border-radius: 0;
+    border-radius: 2px;
     padding: 8px 14px;
     line-height: 1;
     font-size: 1em;
@@ -114,7 +114,7 @@
 /* Next & Prev buttons on post pages */
 
 .prev-next-wrap {
-	margin: 30px auto;
+	margin: 20px auto 0;
 	padding: 0;
 	max-width: 830px;
 	display: flex;
