--- a/src/less/posts/languages/sql.less
+++ b/src/less/posts/languages/sql.less
@@ -2,7 +2,7 @@
   .language-sql,
   .sql {
     background: #262748;
-    color: #c5c8c6;
+    color: #eaf5f3;
 
     .hljs span::selection,
     .hljs::selection {
