--- a/src/less/posts/nextprev.less
+++ b/src/less/posts/nextprev.less
@@ -1,10 +1,9 @@
-article {
+.post-template {
   .nextprev-container {
     position: relative;
     bottom: 0;
     left: 0;
     right: 0;
-    background: white;
     width: 90%;
     display: none;
     margin: auto;
@@ -14,6 +13,9 @@ article {
       display: flex;
       flex-direction: row;
       flex-wrap: nowrap;
+      max-width: 830px;
+      margin: 15px auto 0;
+      background: white;
 
 
       .prev-article {
