--- a/src/less/posts/galleries.less
+++ b/src/less/posts/galleries.less
@@ -42,6 +42,7 @@
     min-width: 100%;
     margin: auto calc(50% - 50vw);
     transform: translateX(calc(50vw - 50%));
+    border: 0;
   }
 
   .kg-width-full {
