--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -118,7 +118,7 @@ header {
 	.post-title {
 		text-align: left;
 		width: -webkit-fill-available;
-		margin: 35px 60px 0;
+		margin: 20px 60px;
 		display: block;
 		font-family: 'ProductSans-Bold', 'TTNorms-Medium' !important;
 		font-size: 2.2em;
@@ -156,7 +156,7 @@ header {
 	.excerpt {
 		font-weight: 400;
 		font-size: 1.25em;
-		margin: 0 60px;
+		margin: 10px 60px;
 		line-height: 1.3;
 		color: @h1-color;
 		font-family: 'TTNorms-Medium';
@@ -177,7 +177,7 @@ header {
 		line-height: 1.3;
 		font-family: 'ProductSans-Regular';
 		font-weight: 100!important;
-		font-size: 1.9em;
+		font-size: 2em;
 		width: fit-content;
 		width: 100%;
 		@media(max-width: 800px) {
@@ -201,7 +201,6 @@ header {
 		font-size: 1.3em;
 		line-height: 1.2;
 		color: #555560;
-		font-weight: 600;
 		margin: 40px 0;
 		font-family: 'ProductSans-Medium';
 		@media(max-width: 800px) {
@@ -746,8 +745,8 @@ header {
 	}
 
 	figure {
-		width: fit-content;
-		max-width: 100%;
+		width: 99%;
+		max-width: 99%;
 		margin: 30px auto;
 		overflow: visible;
 		box-shadow: 1px 0 1px rgba(154, 154, 165, 0.27);
