making gallery changes

--- a/src/less/global/menu.less
+++ b/src/less/global/menu.less
@@ -231,6 +231,7 @@ header {
     height: 50px;
     text-align: center;
     position: relative;
+    border-bottom: 1px solid #efefef;
 
     .menu {
       margin: auto;
@@ -266,7 +267,6 @@ header {
         color: #505f77;
         font-weight: 500;
         transition: all .15s ease-out;
-        position: absolute;
         left:0;
         right:0;
         top:0;
