--- a/src/less/posts/about-author.less
+++ b/src/less/posts/about-author.less
@@ -8,6 +8,12 @@
   width: fit-content;
   margin: 15px auto;
   justify-content: space-between;
+  display: flex;
+
+  @media(max-width: 800px) {
+    margin: 20px 15px;
+  }
+
   @media(max-width: 600px) {
     padding: 30px;
   }
