--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -75,6 +75,10 @@ header {
 	.container {
 		padding: 0;
 
+		@media(max-width: 1200px) {
+			 width: 100%;
+		}
+
 		@media(max-width: 800px) {
 			margin: 0 0 20px 0 !important;
 			width: 100% !important;
