--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -267,6 +267,7 @@ header {
 .main-content {
 	width: 100% !important;
 	padding: 0 !important;
+	box-shadow: 0 0 5px rgba(80, 82, 204, 0.1) !important;
 
 	.post-head {
 		padding: 20px 0;
