--- a/src/less/posts/languages/shell.less
+++ b/src/less/posts/languages/shell.less
@@ -60,7 +60,7 @@
 
     .hljs-meta,
     .hljs-meta-string {
-      color: @nord14;
+      color: @nord9;
     }
 
     .hljs-comment {
@@ -101,7 +101,7 @@
   .language-bash,
   .language-shell {
     .hljs-built_in {
-      color: #df91dc !important;
+      color: @nord12 !important;
     }
 
     &::before {
