--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -206,7 +206,7 @@ header {
 		line-height: 1.2;
 		color: #555560;
 		margin: 40px 0;
-		font-family: 'ProductSans-Medium';
+		font-family: 'ProductSans-Regular';
 		@media(max-width: 800px) {
 			font-size: 1.3em;
 		}
@@ -312,6 +312,8 @@ header {
 			.tags {
 				height: 18px !important;
 				padding: 8px 10px;
+				border-radius: 2px;
+
 				@media(max-width: 600px) {
 					height: 20px !important;
 					padding: 6px 8px;
