replaced ugly code snippets

--- a/partials/postpreview.hbs
+++ b/partials/postpreview.hbs
@@ -31,7 +31,7 @@
     <div class="post-permalink">
       <div class="meta">
         {{#primary_tag}}
-            <span class="tags meta-item {{slug}}"><i class="fas fa-tags"></i> <span>{{name}}</span></span>
+            <a href="{{url}}"><span class="tags meta-item {{slug}}"><i class="fas fa-tags"></i> <span>{{name}}</span></span></a>
         {{/primary_tag}}
         {{#primary_author}}
         {{primary_author.bio}}
