--- a/src/less/global/tags.less
+++ b/src/less/global/tags.less
@@ -24,7 +24,7 @@
 .tag {
   .nodejs {
     color: #69a202 !important;
-    background-color: #f1feda;
+    background-color: #d9ecb6;
 
     * {
       color: #69a202 !important;
@@ -68,11 +68,11 @@
   }
 
   .restapis {
-    color: #763EA9 !important;
-    background-color: lighten(#763EA9, 45%);
+    color: #a93e3e !important;
+    background-color: #f2dbdb;
 
     * {
-      color: #763EA9 !important;
+      color: #a93e3e !important;
     }
   }
 
