--- a/src/less/posts/languages/javascript.less
+++ b/src/less/posts/languages/javascript.less
@@ -1,8 +1,8 @@
 .post-content {
   .hljs.javascript,
   .hljs.language-javascript {
-    background: linear-gradient(#203f50, #0b3c66) !important;
-    color: #5fc793;
+    background: #1e3742;
+    color: #7fd4ba;
 
     &::-moz-selection {
       text-shadow: none;
@@ -101,6 +101,7 @@
     &::before {
       content: "Javascript";
       color: white;
+      background: rgba(50, 70, 94, 0.6);
     }
   }
 }
