replaced ugly code snippets

--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -122,7 +122,7 @@ header {
 	.post-title {
 		text-align: left;
 		width: -webkit-fill-available;
-		margin: 20px 60px;
+		margin: 30px 60px 5px;
 		display: block;
 		font-family: 'ProductSans-Bold', 'TTNorms-Medium' !important;
 		font-size: 2.2em;
@@ -130,7 +130,6 @@ header {
 		letter-spacing: 0;
 		line-height: 1.1;
 		text-align: left;
-		margin-bottom: 5px;
 		color: @h1-color;
 		@media(max-width: 800px) {
 			margin: 30px 40px 10px;
@@ -160,7 +159,7 @@ header {
 	.excerpt {
 		font-weight: 400;
 		font-size: 1.25em;
-		margin: 10px 60px;
+		margin: 10px 60px 30px;
 		line-height: 1.3;
 		color: @h1-color;
 		font-family: 'TTNorms-Medium';
@@ -270,7 +269,7 @@ header {
 	box-shadow: 0 0 5px rgba(80, 82, 204, 0.1) !important;
 
 	.post-head {
-		padding: 20px 0;
+		padding: 10px 0 15px;
 		margin: 0 60px;
 		@media(max-width: 900px) {
 			margin: 0 60px;
@@ -279,7 +278,6 @@ header {
 			margin: 0 35px !important;
 		}
 		@media(max-width: 600px) {
-			padding: 15px 0 !important;
 			margin: 0 25px !important;
 		}
 
