--- a/src/less/global/variables.less
+++ b/src/less/global/variables.less
@@ -43,6 +43,7 @@
 @tableau-color:#d8a918;
 @excel-color: #74a184;
 @sql-color: #435c9e;
+@mapbox-color: #4264fb;
 
 
 @shadow-color: 0 0 5px rgba(65, 67, 144, 0.15);
