--- a/src/less/global/widgets.less
+++ b/src/less/global/widgets.less
@@ -346,27 +346,11 @@
 				&.welcome-to-sql {
 					background: @sql-color;
 				}
+
+				&.mapping-data-with-mapbox {
+					background: @mapbox-color;
+				}
 			}
-		}
-
-		.pandas {
-			background: url("https://cdn.hackersandslackers.com/images/11/panda-icon.png");
-		}
-
-		.codesnippetcorner {
-			background: url("https://cdn.hackersandslackers.com/images/11/python-icon.png");
-		}
-
-		.mysql {
-			background: url("https://cdn.hackersandslackers.com/images/11/dolphin-icon.png");
-		}
-
-		.flask {
-			background: url("https://cdn.hackersandslackers.com/images/11/flask-icon.png");
-		}
-
-		.aws-api {
-			background: url("https://cdn.hackersandslackers.com/images/11/api-icon.png");
 		}
 
 		.post-title {
@@ -425,6 +409,14 @@
 
 		.the-rise-of-google-cloud i {
 			color: @google-color;
+		}
+
+		.welcome-to-sql i {
+			color: @sql-color;
+		}
+
+		.mapping-data-with-mapbox i {
+			color: @mapbox-color;
 		}
 
 		.series-info {
