--- a/partials/widget-series.hbs
+++ b/partials/widget-series.hbs
@@ -2,7 +2,7 @@
 <div class="widget series">
 	<h4 class="title">Series'</h4>
 	<div>
-		{{#get "tags" filter="feature_image:-null" include="count.posts,meta_title,slug" order="count.posts DESC"}}
+		{{#get "tags" filter="feature_image:-null+slug:-[starting-django,plotly-dash]" include="count.posts,meta_title,slug" order="count.posts DESC" limit="all"}}
     {{#foreach tags visibility="internal"}}
       <div class="seriesitem {{slug}}">
 				<div class="series-info">
