--- a/src/less/global/global.less
+++ b/src/less/global/global.less
@@ -171,3 +171,11 @@ a:hover {
 	height: 100%;
 	overflow: hidden;
 }
+
+.icon::before {
+    display: inline-block;
+    font-style: normal;
+    font-variant: normal;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+  }
