--- a/src/less/global/menu.less
+++ b/src/less/global/menu.less
@@ -49,7 +49,13 @@ header {
     height: 100%;
     width: 280px;
     border: none;
-    margin-left: 20px;
+    padding-left: 20px;
+
+    &:hover {
+      background: #2e386fa1;
+      mix-blend-mode: color-dodge;
+      cursor: text;
+    }
 
     i {
       color:white;
@@ -65,7 +71,6 @@ header {
     }
 
     &:focus {
-
       *,
       &::before {
         opacity: 1;
@@ -106,6 +111,8 @@ header {
         }
 
         &:focus {
+          background: #2e386fa1;
+          mix-blend-mode: color-dodge;
 
           *,
           &::before {
