--- a/src/less/global/postlist.less
+++ b/src/less/global/postlist.less
@@ -1,8 +1,6 @@
 @import "variables.less";
 @import "mixin.less";
 
-
-
 .postlist {
   @media(max-width: 800px) {
     padding: 0;
@@ -10,7 +8,7 @@
     width: 92%;
   }
   @media(max-width: 600px) {
-    margin: 0 auto;
+    margin: 20px auto;
     width: 93%;
   }
 
