--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -138,7 +138,7 @@ header {
 		@media(max-width: 600px) {
 			font-size: 1.5em;
 			max-width: auto;
-			margin: 25px 25px 10px;
+			margin: 25px;
 			width: -webkit-fill-available;
 			letter-spacing: 0;
 			font-weight: 600;
@@ -167,10 +167,7 @@ header {
 			margin: 10px 40px 0;
 		}
 		@media(max-width: 600px) {
-			font-size: 1em;
-			max-width: 95%;
-			margin: 0 25px;
-			text-align: center;
+			display: none;
 		}
 	}
 
@@ -197,6 +194,7 @@ header {
 			font-weight: 500!important;
 			border: none;
 			padding: 0 12px;
+			margin-bottom: 20px;
 		}
 	}
 
@@ -212,6 +210,7 @@ header {
 		@media(max-width: 600px) {
 			text-align: left;
 			line-height: 1.4;
+			margin-bottom: 20px;
 		}
 	}
 
