--- a/src/less/pages/tag-page.less
+++ b/src/less/pages/tag-page.less
@@ -124,6 +124,10 @@
         width: -webkit-fill-available;
         padding: 10px 0 0;
 
+        .meta {
+          justify-content: left;
+        }
+
         .btn {
           padding: 12px 20px;
           font-size: 16px;
