added additional code snippet language support

--- a/src/less/posts/languages/markup.less
+++ b/src/less/posts/languages/markup.less
@@ -5,8 +5,11 @@
   .language-endpoint,
   .language-handlebars,
   .language-html,
+  .lnaguage-http,
   .language-jinja,
   .language-xml,
+  .css,
+  .http.
   .xml {
     color: #c5cddc;
     background: #282c34;
