--- a/src/less/posts/languages/shell.less
+++ b/src/less/posts/languages/shell.less
@@ -5,6 +5,9 @@
   .language-output,
   .language-shell,
   .language-endpoint,
+  .bash,
+  .shell,
+  .output,
   .endpoint,
   .shell {
     background: @nord0;
